# projekt-pr-2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
app/: CMakeLists.txt  main.cpp
app/include/: data_storage.h  interface.h  login.h  transaction.h  user.h  user_service.h
app/src/: data_storage.cpp  data_storage.h  interface.cpp  interface.h  login.cpp  login.h  transaction.h  user.h  user_service.cpp  user_service.h
app/tests/: README.md
database/: readme.md
tests/: CMakeLists.txt  mocks.hpp  test_login_service.cpp  test_user_service.cpp
